[package]
name = "terrars-andrewbaxter-fly"
edition = "2021"
version = "0.1.1"
description = "Pre-generated Terrars Fly bindings (andrewbaxter fork)"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-fly-apps-fly"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.1.7"

[features]
app = []
cert = []
data_app = []
data_cert = []
data_ip = []
data_volume = []
ip = []
machine = []
volume = []
